# mini-compute

./: .gitignore  CMakeLists.txt
docs/: architecture.md  invariants.md  protocol.md
scripts/: run_cluster.sh
src/: CMakeLists.txt
src/client/: CMakeLists.txt  main.cpp
src/common/: CMakeLists.txt  log.cpp  log.h  net.cpp  net.h  protocol.cpp  protocol.h
src/coordinator/: CMakeLists.txt  main.cpp
src/worker/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
tests/unit/: CMakeLists.txt  test_net.cpp  test_sanity.cpp
